====
News
====

..
  2015-03-01 Version 1.0.0 released
  =================================


  Changes affecting backwards compatibility
  -----------------------------------------

  - Parameter names are finally properly ``gensym``'ed. This can break
    templates though that used to rely on the fact that they are not. However
    we found none such beast in the wild. (Bug #1915.)

  
  Language Additions
  ------------------

  - For empty ``case object`` branches ``discard`` can finally be used instead
    of ``nil``.


2014-12-29 Version 0.10.2 released
==================================

This release marks the completion of a very important change to the project:
the official renaming from Nimrod to Nim. Version 0.10.2 contains many language
changes, some of which may break your existing code. For your convenience, we
added a new tool called `nimfix <nimfix.html>`_ that will help you convert your
existing projects so that it works with the latest version of the compiler.

Progress towards version 1.0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Although Nim is still pre-1.0, we were able to keep the number of breaking
changes to a minimum so far. Starting with version 1.0, we will not introduce
any breaking changes between major release versions.
One of Nim's goals is to ensure that the compiler is as efficient as possible.
Take a look at the
`latest benchmarks <https://github.com/logicchains/LPATHBench/blob/master/writeup.md>`_,
which show that Nim is consistently near
the top and already nearly as fast as C and C++. Recent developments, such as
the new ``asyncdispatch`` module will allow you to write efficient web server
applications using non-blocking code. Nim now also has a built-in thread pool
for lightweight threading through the use of ``spawn``.

The unpopular "T" and "P" prefixes on types have been deprecated. Nim also
became more expressive by weakening the distinction between statements and